# ai_agent_evaluator

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
api/: models.py  routes.py
docs/: AI_QA_Architect_Design.md
extractor/: docx_extractor.py  extractor.py  pdf_extractor.py
outputs/requirements_extractor/: Clinqup_Chatbot_BRD_test_20260629_162059.json  Clinqup_Chatbot_BRD_test_20260629_163346.json  Clinqup_Chatbot_BRD_test_20260629_182736.json  Clinqup_Chatbot_BRD_test_20260629_183905.json  Clinqup_Chatbot_BRD_test_20260629_184714.json  Clinqup_Chatbot_BRD_test_20260629_185400.json
outputs/text_extractor/: Clinqup_Chatbot_BRD_test_20260629_163612.json  Clinqup_Chatbot_BRD_test_20260629_182704.json
src/: output_store.py
src/api/: models.py  routes.py  routes_classifier.py  routes_requirements.py  routes_scenarios.py
src/db/: connection.py  pipeline_runs.py
src/extractor/: chunker.py  docx_extractor.py  extractor.py  pdf_extractor.py
src/prompts/: conversational_scenario.py  requirements_extractor.py  test_strategy_classifier.py
src/qa_architect/: __init__.py  cli.py  config.py  store.py
src/qa_architect/agents/: __init__.py  behavioral_test_generator.py  requirement_extractor.py
src/qa_architect/api/: __init__.py  app.py  routes.py
src/qa_architect/export/: __init__.py  promptfoo.py
src/qa_architect/ingestion/: __init__.py  models.py  (+1 more)
src/requirements_extractor/: extractor.py  models.py
src/scenario_generation/: models.py  planner.py  service.py  validator.py
src/test_strategy_classifier/: classifier.py
tests/: conftest.py  test_api.py  test_behavioral_generator.py  test_ingestion.py  test_ir.py  test_pipeline.py  test_promptfoo_export.py  test_requirement_extractor.py
tests/fixtures/: sample_brd.md
(+13 files in other folders)
