[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qa-architect"
version = "0.1.0"
description = "AI QA Architect — turns a BRD into a coverage-traceable evaluation blueprint (behavioral tests, metrics, red-team) with framework exports."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Real LLM provider (multi-provider via LiteLLM). Not needed for stub mode / tests.
llm = ["litellm>=1.40", "json-repair>=0.28"]
# Optional document parsers for PDF / DOCX ingestion.
docs = ["pymupdf>=1.24", "python-docx>=1.1"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
qa-architect = "qa_architect.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
# 'TestCategory' is a domain enum, not a test class; and the Starlette/httpx
# notice is upstream. Keep test output clean.
python_classes = []
filterwarnings = [
    "ignore::DeprecationWarning:starlette.testclient",
]
